Fix position of meaning id and change z-index

--- a/css/master.css
+++ b/css/master.css
@@ -13,7 +13,8 @@ h1 {
 }
 
 #meaning {
-  position:absolute;
+  position:fixed;
+  z-index:10;
   top: 1.5em;
   width: 100%;
   margin-left:auto;
